# YoloV5-TensorRT-inference

./: README.md
sample_photo/: CMakeLists.txt  inference.cpp  inference_photo.cpp  processing.hpp
sample_video/: CMakeLists.txt  inference_video.cpp  processing.hpp
