project(inference_photo)
# 更换自己的包含路径
include_directories(/home/zc/TensorRT-8.6.1.6/include)
link_directories(/home/zc/TensorRT-8.6.1.6/lib)
include_directories(/home/zc/TensorRT-8.6.1.6/samples/common)
include_directories(/usr/local/cuda-11.8/include)
link_directories(/usr/local/cuda-11.8/lib64)
include_directories(/usr/local/include/opencv4)
link_directories(/usr/local/lib)
add_executable(inference inference.cpp processing.hpp)
find_package(OpenCV 4.7.0 REQUIRED)
target_link_libraries(inference nvinfer)
target_link_libraries(inference cudart)
target_link_libraries(inference opencv_imgcodecs)